See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.12.00

              pamtris: fix unrecognized command or crash on line with no
              command.  Broken in Netpbm 10.85 (December 2018).

              ppmcmap.h: fix C++ compilation.  Broken at least since Netpbm
              10.35 (August 2006).

25.06.29 BJH  Release 11.11.00

              pamflip: add -inverse.

              pamflip: add -reflect.

              pamdice: add -outsuffix.

              libnetpbm and 'ppmdraw' circle drawing functions: use floating
              point arithmetic to make smoother circle.

              pamdice, pamundice: Add PBM fast path.

              ppmdraw: fix error message about 'filledrectangle' syntax.

              pamdice: fix using more digits than necessary in output file
              names -- width was based on one more slice than was actually
              generated.  Broken since Netpbm 10.29 (August 2005).

              pnmquantall: fix arbitrary shell command execution with input
              file names or color count that contain shell metacharacters.
              Always present ('pnmquantall' has existed, aka 'ppmquantall',
              since primordial Netpbm).

              ppmtogif: fix arbitrary shell commands when arguments contain
              shell metacharacters.  Broken in Netpbm 10.37 (June 2006).

              pnmtofiasco: fix crash when image is really small.  Always
              broken (program was new in Netpbm 9.6, July 2000).
              
              pnmtofiasco: fix bug: uses one tile regardless of
              --tiling-exponent.  Always broken (programs were new in Netpbm
              9.6, July 2000).

              pnmtofiasco: fix bug: infinite loop with multiple tiles.
              Always broken (program was new in Netpbm 96., July 2000),
              but made functional by bug fix in 11.10 (March 2025).
